# MahaFund-Brief

./: .dockerignore  .env.example  .gitignore  ANDHERI BRIEF 50 CRORES POONAM GROUP.docx  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: aws-deploy.yml  docker-hub-deploy.yml
frontend/: app.js  index.html  style.css  vercel.json
src/: config.py  main.py  server.py
src/agents/: base.py  housing.py  maharera.py  ninety_nine_acres.py  zaubacorp.py
src/graph/: nodes.py  pipeline.py  state.py
src/schema/: brief.py  enums.py
src/tools/: captcha_solver.py  pdf_extractor.py
src/utils/: llm.py  logger.py  proxy.py
