[project]
name = "rera-brief-generator"
version = "0.2.0"
description = "Automated research and synthesis for real estate project briefs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.1.15",
    "google-genai>=0.2.0",
    "playwright>=1.46.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.8.2",
    "python-docx>=1.1.2",
    "httpx>=0.27.0",
    "curl_cffi>=0.7.0",
    "PyMuPDF>=1.24.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "groq>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
